--- a/cursos_lic.Rmd
+++ b/cursos_lic.Rmd
@@ -2,6 +2,7 @@
 title: "Cursos de licenciatura"
 description: |
  Contenidos de los cursos de licenciatura ofrecidos por el laboratorio
+output: distill::distill_article
 ---
 
 - [Planeación y análisis de experimentos](https://gerardommc.github.io/Preparacion-analisis-experimentos/)
