--- a/index.Rmd
+++ b/index.Rmd
@@ -10,6 +10,8 @@ links:
     url: "biografia.html"
   - label: GitHub
     url: "https://github.com/gerardommc"
+  - label: Twitter
+    url: "https://twitter.com/MmcGerardo"
 base_url: https://gerardommc.github.io/
 site: distill::distill_website
 output: postcards::trestles
@@ -26,4 +28,4 @@ knitr::opts_chunk$set(echo = FALSE)
 
 ```
 
-Soy veterinario por la Universidad de La Salle Bajío, maestro en ciencias en biología de conservación por el Instituto de Ecología A. C. y doctor en filosofía en salud pública por la James Cook University (Australia). Mis trabajos de investigación se centran en la aplicación de diversas teorías ecológicas y métodos cuantitativos para resolver problemáticas en salud pública y conservación.
+Mi sitio de *Ecología espacial y aplicada* es una iniciativa para compartir recursos de docencia, mis contribuciones a la ciencia y servir de plataforma de contacto con la comunidad universitaria en general y estudiantes de la [ENES unidad Mérida](https://enesmerida.unam.mx) en particular. Si hay temáticas que te interesan y quieres integrarte a este naciente grupo de trabajo no dudes ponerte en contacto!
