--- a/recursos_acad.Rmd
+++ b/recursos_acad.Rmd
@@ -1,7 +1,6 @@
 ---
 title: "Recursos académicos"
-description: |
- Lista de recursos varios para investigación
+image: "imagenes/recursos.svg"
 output: postcards::trestles
 ---
 
