--- a/publicaciones.Rmd
+++ b/publicaciones.Rmd
@@ -10,6 +10,10 @@ knitr::opts_chunk$set(echo = TRUE)
 
 # Revistas arbitradas
 
+- **Gerardo Martín**, Joseph Erinjery, Rikki Gumbs, Ruchira Somaweera, Dileepa Ediriweera, Peter J. Diggle, Anuradhani Kasturiratne, Janaka de Silva, David G. Lalloo, Takuya Iwamura & Kris A. Murray (2021). **Integrating snake distribution, abundance and expert-derived behavioural traits predicts snakebite risk**. *Journal of Applied Ecology, En-prensa*. Impacto JCR: 5.8.\\
+
+- **Gerardo Martín**, Joseph Erinjery, Dileepa Ediriweera, David G. Lalloo, Takuya Iwamura & Kris A. Murray (2021). **Redefining snakebite as a zoonosis: disease incidence is driven by snake ecology, socioeconomics and anthropogenic impacts**. *MedRXiv*. [https://doi.org/10.1101/2021.10.01.21264438](https://doi.org/10.1101/2021.10.01.21264438).\\
+
 - **Gerardo Martín**, Carlos Yáñez-Arenas, Rodrigo Rangel-Camacho, Kris A Murray, Eyal Goldstein, Takuya Iwamura & Xavier Chiappa-Carrara. (2021). **Implications of global environmental change for the burden of snakebite**. *Toxicon:X*. [https://doi.org/10.1016/j.toxcx.2021.100069](https://doi.org/10.1016/j.toxcx.2021.100069). Impacto JCR: 2.2.
 
 - Goldstein, Eyal; Erinjery, Joseph; **Martín, Gerardo**; Kasturiratne, Anuradhani; Ediriweera, Dileepa; de Silva, Janaka; Diggle, Peter; Lalloo, David; Murray, Kris A. & Takyua Iwamura. (2021). **Integrating human behavior and snake ecology with agent-based models to predict snakebite in high risk landscapes**. *PLoS Neglected Tropical Diseases*. [https://doi.org/10.1371/journal.pntd.0009047](https://doi.org/10.1371/journal.pntd.0009047). Impacto JCR: 4.4
@@ -22,13 +26,13 @@ knitr::opts_chunk$set(echo = TRUE)
 
 - **Martín, Gerardo**; Becker, Daniel; Washburn, Alex & Raina K. Plowright (2018) **Environmental persistence of influenza H5N1 is driven by temperature and salinity: insights from a Bayesian meta-analysis**. *Frontiers in Ecology and Evolution*. eISSN: 2296701X. [https://doi.org/10.3389/fevo.2018.00131](https://doi.org/10.3389/fevo.2018.00131). Impacto JCR: 2.7.
 
-- Brannelly, Laura A.; *Martíin, Gerardo*; Lewellyn, John; Skerratt, Lee & Lee Berger (2018). *Size dependant susceptibility to chytridiomycosis in the invasive **Rhinella marina** *. *Diseases of Aquatic Organisms*. 131:107-120. ISSN: 01775103. eISSN: 16161580. [https://doi.org/10.3354/dao03278](https://doi.org/10.3354/dao03278). Impacto JCR: 1.7.
+- Brannelly, Laura A.; *Martíin, Gerardo*; Lewellyn, John; Skerratt, Lee & Lee Berger (2018). **Size dependant susceptibility to chytridiomycosis in the invasive *Rhinella marina* **. *Diseases of Aquatic Organisms*. 131:107-120. ISSN: 01775103. eISSN: 16161580. [https://doi.org/10.3354/dao03278](https://doi.org/10.3354/dao03278). Impacto JCR: 1.7.
 
 - **Martín, Gerardo**; Yáñez-Arenas, Carlos; Plowright, Raina K.; Carla Chen & Skerratt, Lee (2018). **Hendra virus spillover is a bimodal system driven by climatic factors**. \emph{EcoHealth}. 15: 526–542. ISSN: 16129202. eISSN: 16129210. \url{https://doi.org/10.1007/s10393-017-1309-y}. Impacto JCR: 2.2
 
 - **Martín, Gerardo**; Yáñez-Arenas, Carlos; Plowright, Raina K.; Carla Chen \& Skerratt, Lee (2018). **Climate change could increase the extent of areas at risk of Hendra virus spillover**. *EcoHealth*. 15: 509–525. ISSN: 16129202. eISSN: 16129210. [https://doi.org/10.1007/s10393-018-1322-9](https://doi.org/10.1007/s10393-018-1322-9). Impacto JCR: 2.2.
 
-- Yáñez Arenas, Carlos Alberto; Rioja-Nieto, Rodolfo; Dzul-Manzanilla, Felipe; **Martín, Gerardo**; Chiappa-Carrara, Xavier; Buenfil-Ávila, Aura; Manrique-Saide, Pablo, Correa-Morales, Fabián; Díaz-Quiñonez, José Alberto; Pérez-Rentería, Crescencio; Ordoñez-Álvarez, José \& Herón Huerta (2017). **Characterization of environmental suitability for the Asian tiger mosquito (\emph{Aedes albopictus}) in México**. *Journal of Medical Entomology*. ISSN: 19382928. eISSN: 00222585. 55(1):69–77. [https://doi.org/10.1093/jme/tjx185](https://doi.org/10.1093/jme/tjx185). Impacto JCR: 1.7.
+- Yáñez Arenas, Carlos Alberto; Rioja-Nieto, Rodolfo; Dzul-Manzanilla, Felipe; **Martín, Gerardo**; Chiappa-Carrara, Xavier; Buenfil-Ávila, Aura; Manrique-Saide, Pablo, Correa-Morales, Fabián; Díaz-Quiñonez, José Alberto; Pérez-Rentería, Crescencio; Ordoñez-Álvarez, José \& Herón Huerta (2017). **Characterization of environmental suitability for the Asian tiger mosquito (*Aedes albopictus*) in México**. *Journal of Medical Entomology*. ISSN: 19382928. eISSN: 00222585. 55(1):69–77. [https://doi.org/10.1093/jme/tjx185](https://doi.org/10.1093/jme/tjx185). Impacto JCR: 1.7.
 
 - **Martín, Gerardo**; Webb, Rebecca J.;Plowright, Raina K.; Chen, Carla  & Lee F. Skerratt (2017). **Microclimates might limit indirect spillover of the bat borne zoonotic Hendra virus**. *Microbial ecology*. 74: 106–115. ISSN: 1432184X. [https://doi.org/10.1007/s00248-017-0934-x](https://doi.org/10.1007/s00248-017-0934-x). Impacto JCR: 3.6.
 
