--- a/docs/CV/cv.tex
+++ b/docs/CV/cv.tex
@@ -137,7 +137,19 @@ Infectious disease ecology $ \bullet $ Publich Health $ \bullet $ Infectious dis
 \subsection*{Journal articles}
 \noindent 
 
-\years{2020} Murray, Kris A. \textbf{Mart\'in, Gerardo} \& Takuya Iwamura. \textbf{Focus on snake ecology to fight snakebite}. \emph{The Lancet}.\\
+\years{2021} \textbf{Gerardo Mar\'in}, Joseph Erinjery, Rikki Gumbs, Ruchira Somaweera, Dileepa Ediriweera, Peter J. Diggle, Anuradhani Kasturiratne, Janaka de Silva, David G. Lalloo, Takuya Iwamura \& Kris A. Murray. Integrating snake distribution, abundance and expert-derived behavioural traits predicts snakebite risk. \emph{Journal of Applied Ecology, En-prensa}.\\
+
+\years{2021} \textbf{Gerardo Mar\'in}, Joseph Erinjery, Dileepa Ediriweera, David G. Lalloo, Takuya Iwamura \& Kris A. Murray. Redefining snakebite as a zoonosis: disease incidence is driven by snake ecology, socioeconomics and anthropogenic impacts. \emph{MedRXiv}. \url{https://doi.org/10.1101/2021.10.01.21264438}.\\
+
+\years{2021} \textbf{Gerardo Martín}, Carlos Y\'a\~nez-Arenas, Rodrigo S. Camacho, Eyal Goldstein, Takuya Iwamura, Kris A. Murray \& Xavier Chiappa-Carrara. Effects of global environmental change on the burden of snakebite. \emph{ToxiconX}.\\
+
+\years{2021} Eyal Goldstein,Joseph Erinjery, \textbf{Gerardo, Mart\'in}; Anuradhani Kasturiratne, Dileepa Ediriweera, Janaka de Silva, Peter J. Diggle, Peter, David G. Lalloo, Kris A. Murray, \& Takyua Iwamura. \textbf{Integrating human behavior and snake ecology with agent-based models to predict snakebite in high risk landscapes}. \emph{PLoS Neglected Tropical Diseases}.\\
+
+\years{2020} Carlos Y\'a\~nez-Arenas, \textbf{Gerardo Mart\'in}, Luis Osorio-Olvera, Jazm\'in Escobar-Luj\'an, Sandra Casta\~no-Quintero \& Enrique Mart\'inez-Meyer. \textbf{The niche centrality hypothesis: key points about unfilled niches and the potential use of supraspecific modeling units}. \emph{Biodiversity Informatics}-\emph{en prensa}.\\
+
+\years{2020} \textbf{Gerardo Mart\'in}, Mario Espinoza, Michelle Heupel, \& Colin Simpfendorfer (2020). \textbf{Estimating marine protected area network benefits for reef sharks}. \emph{Journal of Applied Ecology}. eISSN: 1365-2664. \url{https://doi.org/10.1111/1365-2664.13706}.\\
+
+\years{2019} Kris Murray, \textbf{Gerardo Mart\'in} \& Takuya Iwamura (2019). \textbf{Focus on snake ecology to fight snakebite}. \emph{The Lancet}. (19) 325. ISSN: 01406736. \url{https://doi.org/10.1016/S0140-6736(19)32510-3}\\
 
 \years{2018} \textbf{Mart\'in, Gerardo}; Becker, Daniel; Washburn, Alex \& Raina K. Plowright. \textbf{Environmental persistence of influenza H5N1 is driven by temperature and salinity: insights from a Bayesian meta-analysis}. \emph{Frontiers in Ecology and Evolution}.\\
 
@@ -163,9 +175,9 @@ Infectious disease ecology $ \bullet $ Publich Health $ \bullet $ Infectious dis
 
 \subsubsection*{In-review}
 
-\years{2020} \textbf{Mart\'in, Gerardo}; Espinoza-Mendiola, Mario; Heupel, Michelle \& Colin Simpfendorfer. \emph{Estimating marine protected area network benefits for reef sharks}. \emph{Journal of Applied Ecology}.\\
+\years{2021} \textbf{Gerardo Mart\'in}, Joseph Erinjery, Taluya Iwamura \& Kris A. Murray. \textbf{Redefining snakebite envenoming as a zoonosis: disease incidence is driven by snake ecology, socioeconomics and anthropogenic impacts}. \emph{PLoS Neglected Tropical Diseases}.
 
-\years{2020} Y\'a\~nez-Arenas, Carlos; \textbf{Mart\'in, Gerardo}; Osorio-Olvera, Luis; Escobar-Luj\'an, Jazm\'in; Casta\~no-Quitenro, Sandra; Chiappa-Carrara, Xavier \& ; Enrique Mart\'inez-Meyer. \textbf{The abundant niche-centroid hypothesis: key points about unfilled niches and the potential use of supraspecfic modeling units}. \emph{Biodiversity informatics}.
+\years{2021} \textbf{Mart\'in, Gerardo}; Carlos Y\'a\~nez-Arenas \& Xavier Chiappa-Carrara. \textbf{Discrepancies between PPMs and MVEs identify the niche centroid - geography configuration}. \emph{Ecological Modelling}.
 
 \subsubsection*{Ongoing projects}
 
