--- a/docs/CV/cv-espanol.tex
+++ b/docs/CV/cv-espanol.tex
@@ -172,7 +172,7 @@ Modelado espacial de procesos ecol\'ogicos y transmisi\'on de enfermedades $ \bu
 
 \years{2021} \textbf{Gerardo Mar\'in}, Joseph Erinjery, Dileepa Ediriweera, David G. Lalloo, Takuya Iwamura \& Kris A. Murray. Redefining snakebite as a zoonosis: disease incidence is driven by snake ecology, socioeconomics and anthropogenic impacts. \emph{MedRXiv}. \url{https://doi.org/10.1101/2021.10.01.21264438}.\\
 
-\years{2021} \textbf{Gerardo Martín}, Carlos Y\'a\~nez-Arenas, Rodrigo S. Camacho, Eyal Goldstein, Takuya Iwamura, Kris A. Murray \& Xavier Chiappa-Carrara. Effects of global environmental change on the burden of snakebite. \emph{ToxiconX}.\\
+\years{2021} \textbf{Gerardo Martín}, Carlos Y\'a\~nez-Arenas, Rodrigo S. Camacho, Eyal Goldstein, Takuya Iwamura, Kris A. Murray \& Xavier Chiappa-Carrara. Implications of global environmental change for the burden of snakebite. \emph{ToxiconX}.\\
 
 \years{2021} Eyal Goldstein,Joseph Erinjery, \textbf{Gerardo, Mart\'in}; Anuradhani Kasturiratne, Dileepa Ediriweera, Janaka de Silva, Peter J. Diggle, Peter, David G. Lalloo, Kris A. Murray, \& Takyua Iwamura. \textbf{Integrating human behavior and snake ecology with agent-based models to predict snakebite in high risk landscapes}. \emph{PLoS Neglected Tropical Diseases}.\\
 
