Actualizacion cursos y publicaciones

--- a/cursos_lic.Rmd
+++ b/cursos_lic.Rmd
@@ -10,10 +10,12 @@ output: postcards::trestles
 
 - [Planeación y análisis de experimentos (2021-2)](https://gerardommc.github.io/Preparacion-analisis-experimentos/)
 
+- Estancia de investigación I
+
 # Licenciatura en Ecología
 - [Modelos matemáticos en ecología I (2022-1)](https://gerardommc.github.io/Modelos-matematicos-ECO-I/)
 
 # Licenciatura en Ciencias Ambientales
 - [Modelación matemática (Ciencias Ambientales, 2022-1)](https://gerardommc.github.io/Modelacion-matematica-CA/)
 
-- Temas selectos de herramientas cuantitativas
+- Análisis y modelado espacial
